--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   animated_splash_screen: ^1.3.0
   lottie: ^3.1.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
